--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "babel-node server.js",
     "build": "./node_modules/.bin/webpack --mode production",
+	"builddev": "./node_modules/.bin/webpack --mode development",
     "dev-start": "nodemon --exec babel-node server.js --ignore public/",
     "dev-build": "./node_modules/.bin/webpack -wd",
     "eslint": "npx eslint controllers/ models/ react/ test/ config.js router.js server.js",
