--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "propagating-hammerjs": "^1.4.0",
     "uuid": "^7.0.0",
     "vis-data": "^6.3.0",
-    "vis-util": "^4.0.0"
+    "vis-util": "^4.0.0",
+	"socket.io": "2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
