--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "uuid": "^7.0.0",
     "vis-data": "^6.3.0",
     "vis-util": "^4.0.0",
-    "socket.io": "2.3.0"
+    "socket.io": "2.3.0",
+	"slimerjs": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
