--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@egjs/hammerjs": "^2.0.0",
     "autoprefixer": "^9.8.4",
     "axios": "^0.19.2",
+	"lowdb": "^1.0.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
